examples/test/testpolicy10121.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10121
  namespace: namespace31
spec:
  podSelector:
    matchLabels:
      key43: value20
      key25: value47
      key28: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value10
      podSelector:
        matchLabels:
          key37: value23
